[package]
name = "space_track_api"
version = "0.1.0"
edition = "2024"

[dependencies]
ureq = { version = "2", features = ["cookies", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
csv = { version = "1", optional = true }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

[features]
# enable CSV parsing (pulls in the `csv` crate)
csv = ["dep:csv"]
